<resources>
    <string name="app_name">Select a game</string>
    <string name="title_2048">2048</string>
    <string name="title_senku">Senku</string>
    <string name="score">SCORE</string>
    <string name="time">TIME</string>
    <string name="best">BEST</string>
    <string name="back">BACK</string>
    <string name="newGame">NEW GAME</string>
    <string name="copyrightText">Version 1.0.0\nCopyright © 2023 RiotGames\nAll Rights Reserved.</string>

    <string name="senkuTimer">60</string>
    <string name="undoTickets">5</string>

    <string name="senkuScore">125</string>
    <string name="dosmilScore">270</string>

    <string name="username">SergiBatle00</string>
    <string name="pass">1234</string>
    <string name="email">sergibatle00@gmail.com</string>
    <string name="points">12</string>
    <string name="undo">undo</string>
</resources>