<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBrown"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Game2048">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/title_2048"
        android:textColor="@color/titleBrown"
        android:textSize="64dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2048"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_border_score2048"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2048"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/backgroundBrown"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/backgroundBrown"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_border_score2048"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2048"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textColor="@color/backgroundBrown"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/backgroundBrown"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/newgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonBrown"
        android:text="@string/newGame"
        android:textColor="@color/backgroundBrown"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2048"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout2048"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/rounded_border_score2048"
        android:columnCount="4"
        android:rowCount="4"
        android:padding="2dp"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </GridLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:backgroundTint="@color/buttonBrown"
        android:text="@string/back"
        android:textColor="@color/backgroundBrown"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2048"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:backgroundTint="@color/buttonBrown"
        android:text="@string/undo"
        android:textColor="@color/backgroundBrown"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2048"
        app:layout_constraintVertical_bias="0.319" />

</androidx.constraintlayout.widget.ConstraintLayout>