<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/pass" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="selectImage"
            android:scaleType="fitCenter"
            android:src="@drawable/profile" />

    </LinearLayout>

    <TextView
        android:id="@+id/scores1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="Your scores"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/scores2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded_dark"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/gridLayoutSenku"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_2048"
                android:textColor="@color/backgroundBrown"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/dosmilScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosmilScore"
                android:textColor="@color/backgroundBrown"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/resetScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="Reset scores" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Senku timer:"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/senkuTimer"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/senkuTimer"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Undo tickets:"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/undo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/undoTickets"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="reset" />

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Apply" />
    </LinearLayout>

</LinearLayout>